--- a/index.html
+++ b/index.html
@@ -18,18 +18,15 @@
 
     <title>FreeFeed</title>
 
-    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/assets/images/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" sizes="512x512" href="/assets/images/ios/icon_512_512.png" />
-    <link rel="apple-touch-icon" sizes="256x256" href="/assets/images/ios/icon_256_256.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/assets/images/ios/icon_192_192.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/ios/icon_180_180.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/images/ios/icon_152_152.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/images/ios/icon_144_144.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/images/ios/icon_120_120.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/images/ios/icon_114_114.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/images/ios/icon_76_76.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/images/ios/icon_72_72.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/site.webmanifest">
+    <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/assets/images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/assets/images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
     <noscript>
       <style>
