--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
     <title>FreeFeed</title>
     <meta name="description" content="FreeFeed is a small and free social network, that enables you to discover and discuss the interesting stuff your friends find on the web">
 
-    <link rel="icon" href="/assets/images/favicon.ico" sizes="48x48">
-    <link rel="icon" href="/assets/images/favicon.svg" sizes="any" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/assets/images/apple-touch-icon-180x180.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/site.webmanifest">
+    <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/assets/images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/assets/images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
     <noscript>
       <style>
